--- a/Python09_10_24.ipynb
+++ b/Python09_10_24.ipynb
@@ -17,6 +17,158 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pontos = 0\n",
+    "questao = 1\n",
+    "\n",
+    "while questao <= 3:\n",
+    "    resposta = input(f\"Resposta de questao {questao}\")\n",
+    "\n",
+    "    if questao  == 1 and resposta == 'b':\n",
+    "        pontos = pontos + 1\n",
+    "    if questao == 2 and resposta == 'a':\n",
+    "        pontos = pontos + 1\n",
+    "    if questao == 3 and resposta == 'd':\n",
+    "        pontos = pontos + 1\n",
+    "\n",
+    "    quetsao = questao + 1\n",
+    "24323243343243\n",
+    "print(f\"O aluno fez {pontos} pontos\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 x 1 = 1 * 1\n",
+      "1 x 2 = 1 * 2\n",
+      "1 x 3 = 1 * 3\n",
+      "1 x 4 = 1 * 4\n",
+      "1 x 5 = 1 * 5\n",
+      "1 x 6 = 1 * 6\n",
+      "1 x 7 = 1 * 7\n",
+      "1 x 8 = 1 * 8\n",
+      "1 x 9 = 1 * 9\n",
+      "1 x 10 = 1 * 10\n",
+      "2 x 1 = 2 * 1\n",
+      "2 x 2 = 2 * 2\n",
+      "2 x 3 = 2 * 3\n",
+      "2 x 4 = 2 * 4\n",
+      "2 x 5 = 2 * 5\n",
+      "2 x 6 = 2 * 6\n",
+      "2 x 7 = 2 * 7\n",
+      "2 x 8 = 2 * 8\n",
+      "2 x 9 = 2 * 9\n",
+      "2 x 10 = 2 * 10\n",
+      "3 x 1 = 3 * 1\n",
+      "3 x 2 = 3 * 2\n",
+      "3 x 3 = 3 * 3\n",
+      "3 x 4 = 3 * 4\n",
+      "3 x 5 = 3 * 5\n",
+      "3 x 6 = 3 * 6\n",
+      "3 x 7 = 3 * 7\n",
+      "3 x 8 = 3 * 8\n",
+      "3 x 9 = 3 * 9\n",
+      "3 x 10 = 3 * 10\n",
+      "4 x 1 = 4 * 1\n",
+      "4 x 2 = 4 * 2\n",
+      "4 x 3 = 4 * 3\n",
+      "4 x 4 = 4 * 4\n",
+      "4 x 5 = 4 * 5\n",
+      "4 x 6 = 4 * 6\n",
+      "4 x 7 = 4 * 7\n",
+      "4 x 8 = 4 * 8\n",
+      "4 x 9 = 4 * 9\n",
+      "4 x 10 = 4 * 10\n",
+      "5 x 1 = 5 * 1\n",
+      "5 x 2 = 5 * 2\n",
+      "5 x 3 = 5 * 3\n",
+      "5 x 4 = 5 * 4\n",
+      "5 x 5 = 5 * 5\n",
+      "5 x 6 = 5 * 6\n",
+      "5 x 7 = 5 * 7\n",
+      "5 x 8 = 5 * 8\n",
+      "5 x 9 = 5 * 9\n",
+      "5 x 10 = 5 * 10\n",
+      "6 x 1 = 6 * 1\n",
+      "6 x 2 = 6 * 2\n",
+      "6 x 3 = 6 * 3\n",
+      "6 x 4 = 6 * 4\n",
+      "6 x 5 = 6 * 5\n",
+      "6 x 6 = 6 * 6\n",
+      "6 x 7 = 6 * 7\n",
+      "6 x 8 = 6 * 8\n",
+      "6 x 9 = 6 * 9\n",
+      "6 x 10 = 6 * 10\n",
+      "7 x 1 = 7 * 1\n",
+      "7 x 2 = 7 * 2\n",
+      "7 x 3 = 7 * 3\n",
+      "7 x 4 = 7 * 4\n",
+      "7 x 5 = 7 * 5\n",
+      "7 x 6 = 7 * 6\n",
+      "7 x 7 = 7 * 7\n",
+      "7 x 8 = 7 * 8\n",
+      "7 x 9 = 7 * 9\n",
+      "7 x 10 = 7 * 10\n",
+      "8 x 1 = 8 * 1\n",
+      "8 x 2 = 8 * 2\n",
+      "8 x 3 = 8 * 3\n",
+      "8 x 4 = 8 * 4\n",
+      "8 x 5 = 8 * 5\n",
+      "8 x 6 = 8 * 6\n",
+      "8 x 7 = 8 * 7\n",
+      "8 x 8 = 8 * 8\n",
+      "8 x 9 = 8 * 9\n",
+      "8 x 10 = 8 * 10\n",
+      "9 x 1 = 9 * 1\n",
+      "9 x 2 = 9 * 2\n",
+      "9 x 3 = 9 * 3\n",
+      "9 x 4 = 9 * 4\n",
+      "9 x 5 = 9 * 5\n",
+      "9 x 6 = 9 * 6\n",
+      "9 x 7 = 9 * 7\n",
+      "9 x 8 = 9 * 8\n",
+      "9 x 9 = 9 * 9\n",
+      "9 x 10 = 9 * 10\n",
+      "10 x 1 = 10 * 1\n",
+      "10 x 2 = 10 * 2\n",
+      "10 x 3 = 10 * 3\n",
+      "10 x 4 = 10 * 4\n",
+      "10 x 5 = 10 * 5\n",
+      "10 x 6 = 10 * 6\n",
+      "10 x 7 = 10 * 7\n",
+      "10 x 8 = 10 * 8\n",
+      "10 x 9 = 10 * 9\n",
+      "10 x 10 = 10 * 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "tabuada = 1\n",
+    "\n",
+    "while tabuada <= 10:\n",
+    "\n",
+    "    numero = 1\n",
+    "\n",
+    "    while numero <= 10:\n",
+    "        \n",
+    "        print(f\"{tabuada} x {numero} = {tabuada} * {numero}\")\n",
+    "\n",
+    "        numero += 1\n",
+    "\n",
+    "    tabuada += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
