--- a/Python09_10_24.ipynb
+++ b/Python09_10_24.ipynb
@@ -169,6 +169,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nota igual encontrada: 7\n",
+      "Nota igual encontrada: 8\n",
+      "Nota igual encontrada: 9\n",
+      "Nota igual encontrada: 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "aluno1 = [7, 8, 9, 10, 6]\n",
+    "aluno2 = [8, 9, 10, 5, 7]\n",
+    "\n",
+    "for nota1 in aluno1:\n",
+    "    for nota2 in aluno2:\n",
+    "        if nota1 == nota2:\n",
+    "            print(f\"Nota igual encontrada: {nota1}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aluno1 = [7, 8, 9, 10, 6]\n",
+    "aluno2 = [8, 9, 10, 5, 7]\n",
+    "\n",
+    "for i in range(len{aluno1}):\n",
+    "    for k in range(len{aluno2}):\n",
+    "        if i == k:\n",
+    "            print(f\"A soma dos elementos na posição {i}: {aluno[i] + aluno2[k]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
