Exercícios de repetição

--- a/Python09_10_24.ipynb
+++ b/Python09_10_24.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,25 +195,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A soma dos elementos na posição 0: 15\n",
+      "A soma dos elementos na posição 1: 17\n",
+      "A soma dos elementos na posição 2: 19\n",
+      "A soma dos elementos na posição 3: 15\n",
+      "A soma dos elementos na posição 4: 13\n"
+     ]
+    }
+   ],
    "source": [
     "aluno1 = [7, 8, 9, 10, 6]\n",
     "aluno2 = [8, 9, 10, 5, 7]\n",
     "\n",
-    "for i in range(len{aluno1}):\n",
-    "    for k in range(len{aluno2}):\n",
+    "for i in range(len(aluno1)):\n",
+    "    for k in range(len(aluno2)):\n",
     "        if i == k:\n",
-    "            print(f\"A soma dos elementos na posição {i}: {aluno[i] + aluno2[k]}\")"
+    "            print(f\"A soma dos elementos na posição {i}: {aluno1[i] + aluno2[k]}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -331,6 +336,139 @@
     "for i in range(1, 11):\n",
     "    for j in range(1, 11):\n",
     "        print(f\"{i} x {j} = {i*j}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 x 2 = 4\n",
+      "2 x 3 = 6\n",
+      "2 x 4 = 8\n",
+      "2 x 5 = 10\n",
+      "2 x 6 = 12\n",
+      "3 x 2 = 6\n",
+      "3 x 3 = 9\n",
+      "3 x 4 = 12\n",
+      "3 x 5 = 15\n",
+      "3 x 6 = 18\n",
+      "4 x 2 = 8\n",
+      "4 x 3 = 12\n",
+      "4 x 4 = 16\n",
+      "4 x 5 = 20\n",
+      "4 x 6 = 24\n",
+      "5 x 2 = 10\n",
+      "5 x 3 = 15\n",
+      "5 x 4 = 20\n",
+      "5 x 5 = 25\n",
+      "5 x 6 = 30\n",
+      "6 x 2 = 12\n",
+      "6 x 3 = 18\n",
+      "6 x 4 = 24\n",
+      "6 x 5 = 30\n",
+      "6 x 6 = 36\n"
+     ]
+    }
+   ],
+   "source": [
+    "#EX. 2\n",
+    "\n",
+    "for i in range(2, 7):\n",
+    "    for j in range(2, 7):\n",
+    "        print(f\"{i} x {j} = {i*j}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A frase O rato casa roeu a roupa possui essas palavras 2 chaves\n",
+      "A frase A casa está suja possui essas palavras 1 chaves\n",
+      "A frase Python é interessante possui essas palavras 1 chaves\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Ex. 1\n",
+    "\n",
+    "frases = ['O rato roeu a roupa', 'A casa está suja', 'Python é interessante']\n",
+    "palavras_chave = ['rato', 'casa', 'python']\n",
+    "\n",
+    "for frase in frases:\n",
+    "    count_palavras_chave = 0\n",
+    "\n",
+    "    for chave in palavras_chave:\n",
+    "        if chave.lower() in frase.lower():\n",
+    "            count_palavras_chave += 1\n",
+    "\n",
+    "    print(f\"A frase {frase} possui essas palavras {count_palavras_chave} chaves\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "270\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Ex. 3\n",
+    "\n",
+    "lista1 = [10, 20, 30, 40, 50]\n",
+    "lista2 = [20, 10, 40, 30, 20]\n",
+    "\n",
+    "nota = sum(lista1 + lista2)\n",
+    "\n",
+    "for i in range(len(lista1)):\n",
+    "    for k in range(len(lista2)):\n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A palavra python tem 0 vogais\n",
+      "A palavra c tem 0 vogais\n",
+      "A palavra javascript tem 0 vogais\n",
+      "A palavra matlab tem 0 vogais\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Ex 6\n",
+    "\n",
+    "palavras = ['python', 'c', 'javascript', 'matlab']\n",
+    "vogais = 'aeiou'\n",
+    "for palavra in palavras:\n",
+    "    count_vogais = 0\n",
+    "    \n",
+    "    for letra in palavras:\n",
+    "        if letra in vogais:\n",
+    "            count_vogais += 1\n",
+    "\n",
+    "    print(f\"A palavra {palavra} tem {count_vogais} vogais\")"
    ]
   },
   {
